--- a/frontend/src/styles/pages/_cart.scss
+++ b/frontend/src/styles/pages/_cart.scss
@@ -21,6 +21,10 @@
     }
   }
   &__wrapper {
+    display: flex;
+    &__container {
+      width: 100%;
+    }
     > h2 {
       margin-bottom: 30px;
       text-align: center;
@@ -42,18 +46,24 @@
     }
   }
   &__box {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border: 1px solid gainsboro;
     text-align: center;
     padding: 15px;
     margin-bottom: 15px;
-    background: rgba(255, 255, 255, 0.2);
     border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    border: 1px solid gainsboro;
+    transition: 0.3s ease;
+    position: relative;
+    cursor: pointer;
+    &:hover {
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+      backdrop-filter: blur(5px);
+      background: rgba(255, 255, 255, 0.2);
+      -webkit-backdrop-filter: blur(5px);
+    }
     @include breakpoint(md) {
       width: 100%;
     }
@@ -66,6 +76,7 @@
       display: flex;
       flex-direction: column;
       > h3 {
+        font-size: 1rem;
         text-transform: uppercase;
         margin-block: 0.62rem;
         display: -webkit-box;
@@ -74,14 +85,21 @@
         overflow: hidden;
       }
       > button {
+        position: absolute;
+        top: 0;
+        left: 10px;
         border: none;
-        padding: 8px;
         margin-top: 10px;
         cursor: pointer;
-        border: 1px solid grey;
-        background-color: orangered;
-        color: #fff;
+        background: none;
       }
+    }
+    &__summary {
+      margin-top: 50px;
+      width: 100%;
+      display: flex;
+      align-items: flex-start;
+      justify-content: flex-end;
     }
 
     &__price {
@@ -107,15 +125,25 @@
     }
 
     &__img {
-      width: 200px;
+      width: 150px;
       img {
-        width: 120px;
+        width: 90px;
+        height: 90px;
+        object-fit: contain;
       }
     }
     &__checkout {
+      border-radius: 10px;
+      border: 1px solid gainsboro;
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      flex-direction: column-reverse;
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+      backdrop-filter: blur(5px);
+      background: rgba(255, 255, 255, 0.2);
+      -webkit-backdrop-filter: blur(5px);
+      width: 300px;
+
       padding-block: 20px;
       @include breakpoint(sm) {
         flex-direction: column;
@@ -145,6 +173,7 @@
 }
 
 .clear {
+  margin-top: 10px;
   border: none;
   border: 1px solid grey;
   background-color: #0096ff;
