--- a/frontend/src/styles/components/_categories.scss
+++ b/frontend/src/styles/components/_categories.scss
@@ -6,9 +6,13 @@
     text-align: center;
   }
   &__item {
+    flex-wrap: wrap;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    @include breakpoint(sm) {
+      justify-content: center;
+    }
   }
   &__wrapper {
     margin-top: 20px;
