--- a/frontend/src/styles/components/_hero.scss
+++ b/frontend/src/styles/components/_hero.scss
@@ -9,6 +9,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  @include breakpoint(sm) {
+    background-position: center;
+  }
   > button {
     padding: 15px 50px;
     margin-top: 100px;
