responsive style fix

--- a/frontend/src/styles/pages/_checkout.scss
+++ b/frontend/src/styles/pages/_checkout.scss
@@ -1,5 +1,8 @@
 .checkout {
   padding-bottom: 30px;
+  &__empty {
+    height: 50vh;
+  }
   &__wrapper {
     display: flex;
     justify-content: space-around;
